--- a/css/admin.css
+++ b/css/admin.css
@@ -1,42 +1,8 @@
 #app{
-margin-left: 10%;
-width: 80%;
+	display: flex;
 	flex-direction: column ;
 	
-	background-color: whitesmoke;
-
 }
-
-#m{
-display: flex;
-margin: 8px;
-padding: 9px;
-
-}
-.om{
-margin: 3px;
-border-color: darkblue;
-border-width: 1px;
-border-style: solid;
-}
-
-#Admin_Medico{
-display: none;
-width: 80%;
-flex-direction: column;
-
-}
-#Admin_Estudio{
-display: none;
-width: 80%;
-flex-direction: column;
-}
-#Admin_Turno{
-display: none;
-width: 80%;
-flex-direction: column;
-}
-
 .opciones_medico{
 
 margin: 6px;
@@ -50,35 +16,32 @@ border: 1px solid darkblue;
 padding: 7px;
 }
 
-.opciones_estudio{
-
-margin: 6px;
-border: 1px solid darkblue;
-padding: 3px;
-height:min-content ;
+#m{
+display: flex;
+margin: 8px;
+padding: 9px;
 }
-table td{
-size: 10px;
-border: 1px solid darkblue;
-padding: 7px;
-}
-
-.opciones_turno{
-
-margin: 6px;
-border: 1px solid darkblue;
-padding: 3px;
-height:min-content ;
-}
-table td{
-size: 10px;
-border: 1px solid darkblue;
-padding: 7px;
+.om{
+margin: 3px;
+border-color: darkblue;
+border-width: 1px;
+border-style: solid;
 }
 
-#reg_medico{
-
-	display: none;
+#Admin_Medico{
+display: none;
 
 }
+#Admin_Estudio{
+display: none;
+}
+#Admin_Turno{
+display: none;
+}
 
+
+hover:om{
+
+border-width: 5px;
+background-color: red;
+}
