--- a/css/admin.css
+++ b/css/admin.css
@@ -66,5 +66,34 @@ h1 {
 
 		.btndiv{
 			margin-right: 48%;
-			margin-bottom: 4%;rg
+			margin-bottom: 4%;
+		}
+		.pos{
+		display: flex;
+		flex-direction: row;
+		margin-left: 40px;
+		margin-right: 40px;
+		}
+
+		.pos1{
+		align-items: flex-start;
+		border-color: black;
+		border-style: solid;
+		border-width: 3px;
+		background-color: whitesmoke;
+		margin-right: 15px;
+		padding-bottom: 8px;
+		}
+
+		.pos2{
+		align-items: flex-end;
+	
+		}
+		#app_l{
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		}
+		#men_administrador{
+ 		margin-right: 40%;
 		}
