--- a/css/inicio.css
+++ b/css/inicio.css
@@ -30,7 +30,7 @@ h1 {
 			height:20px;
 		}
 		div{
-			width:50%;
+		
 			margin-left: auto;
 			margin-right: auto;
 			text-align: center;
@@ -38,8 +38,7 @@ h1 {
 		}
 
 		.muestra{
-				width: 90%;
-			height: 50%;
+		
 			display: flex;
 			flex-direction: row;
 			align-items: center;
@@ -53,3 +52,39 @@ h1 {
 			max-width: fit-content;
 		
 		}
+		#head{
+
+			display: flex;
+		}
+	
+		#espe{
+
+	
+			height:200px ;
+		}
+
+		#login{
+			padding-top: 8px;
+			border-color: black;
+			border-style: solid;
+			border-width: 2px;
+			border-radius: 5px;
+			height: 200px;
+			width: 300px;
+		}
+
+		#foot{
+			display: flex;
+			
+
+		}
+		.foot{
+			height: 200px;
+			width: 300px;	
+			border-color: darkblue;
+			border-style: solid;
+			border-width: 2px;
+			border-radius: 5px;
+			background-color: whitesmoke;
+		}
+		
