--- a/css/estilosvarios.css
+++ b/css/estilosvarios.css
@@ -1,4 +1,4 @@
-h1 {
+	h1 {
 			text-align:center;
 			font-size:30px;
 			color:darkblue;			
@@ -7,8 +7,25 @@ h1 {
 			text-align:center;
 			font-size:25px;
 			color:black;
-
+		}		
+		div{
+			display:flex;
+			flex-direction:column;
+			width:50%;
+			margin:auto;
+			align-items:center;
+			display:flex;
+			padding:10px;
 		}
+		
+		a{
+			margin:auto;
+		}
+		
+		form{
+			margin:auto;
+		}
+		
 		table{
 			margin-left: auto;
 			margin-right: auto;
@@ -29,27 +46,6 @@ h1 {
 			width:12vw;
 			height:20px;
 		}
-		div{
-			width:50%;
-			margin-left: auto;
-			margin-right: auto;
-			text-align: center;
-			align-items:center;
-		}
-
-		.muestra{
-				width: 90%;
-			height: 50%;
-			display: flex;
-			flex-direction: row;
-			align-items: center;
-			margin: 10%;
-		}
-
-		img{
-			width: 90%;
-			height: 90%;
-			max-height: fit-content;
-			max-width: fit-content;
-		
+		select{
+			min-width: 50px;
 		}
