--- a/css/menuppal.css
+++ b/css/menuppal.css
@@ -1,4 +1,4 @@
-h1 {
+		h1 {
 			text-align:center;
 			font-size:30px;
 			color:darkblue;			
@@ -7,8 +7,14 @@ h1 {
 			text-align:center;
 			font-size:25px;
 			color:black;
-
+		}		
+		div{
+			width:50%;
+			margin:auto;
+			align-items:center;
+			display:flex;
 		}
+		
 		table{
 			margin-left: auto;
 			margin-right: auto;
@@ -28,9 +34,4 @@ h1 {
 			text-align:center;
 			width:12vw;
 			height:20px;
-		}
-		div{
-			width:50%;
-			margin:auto;
-			align-items:center;
 		}
